--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -64,6 +64,21 @@
 
         <div id="home">
             <div id="stage-caption">
+
+                <div class="alert alert-info alert-dismissible fade show" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <p class="lead">
+                        We'd really appreciate if you could play around with the application and then taking a survey monkey
+                    </p>
+                    <div class="d-flex justify-content-center">
+                        <a id="survey" class="btn btn-primary btn-lg " href="https://www.surveymonkey.co.uk/r/VKXG7PP">
+                            Quick Survey
+                        </a>
+                    </div>
+                </div>
+
                 <img id="ttt-logo-front-page" src="@routes.Assets.versioned("icons/ttt_logo_white.png")" alt="TTT Logo" height="128px">
                 <h2 id="ttt-h5-front-page" class="display-5">Easy planning for busy primary teachers</h2>
                 <p>Designed specifically for the Scottish Curriculum for Excellence</p>
@@ -76,6 +91,7 @@
                     <img class="facebook-group-icon" src="@routes.Assets.versioned("icons/FB-f-Logo__white_29.png")" alt="logo" height="22">
                     Join Our Facebook Group
                 </a>
+
             </div>
         </div>
 
