--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
@@ -60,15 +60,10 @@
                             href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
                                 Manage @classDetails.className.name</a>
                         </li>
-                        <li class="nav-item manage-class-nav-item-on-right">
+                        <li class="nav-item manage-class-nav-item-rightmost">
                             <a id="manage-class-goto-timetable" class="btn btn-info" role="button"
                             href="@controllers.planning.classtimetable.routes.ClassTimetableController.classTimetable(classDetails.id.id)">
                                 Class Timetable</a>
-                        </li>
-                        <li class="nav-item manage-class-nav-item-rightmost">
-                            <a id="termly-plans-edit" role="button" class="btn btn-warning"
-                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansGroupLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">
-                                Re-Select Es&Os/Benchmarks</a>
                         </li>
                     </ul>
                 </div>
@@ -135,7 +130,18 @@
                 </div>
             </div>
         }
+
     </div>
+    <div class="d-flex justify-content-end">
+        <div class="col-7"></div>
+        <div class="col-3">
+            <a id="termly-plans-edit" role="button" class="btn btn-warning"
+            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansGroupLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">
+                Re-Select Es&Os/Benchmarks</a>
+        </div>
+    </div>
+
+
     </div>
 
 
