--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -13,18 +13,20 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/ttt_owl.png")">
             <!-- Hotjar Tracking Code for www.dev.timetoteach.zone -->
         <script>
-                (function(h,o,t,j,a,r){
-                    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-                    h._hjSettings={hjid:801472,hjsv:6};
-                    a=o.getElementsByTagName('head')[0];
-                    r=o.createElement('script');r.async=1;
-                    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-                    a.appendChild(r);
-                })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-        </script>
+    (function (h, o, t, j, a, r) {
+        h.hj = h.hj || function () {
+            (h.hj.q = h.hj.q || []).push(arguments)
+        };
+        h._hjSettings = {hjid: 801472, hjsv: 6};
+        a = o.getElementsByTagName('head')[0];
+        r = o.createElement('script');
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+</script>
     </head>
     <body>
-
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#startupNavbar" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -557,7 +559,8 @@
                         <div class="col-md-12">
                             <a href="https://twitter.com/timetoteachzone?ref_src=twsrc%5Etfw"
                             class="twitter-follow-button" data-size="large" data-show-count="false">
-                                Follow @@timetoteachzone</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                Follow @@timetoteachzone</a>
+                            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                             @*<a href="" class="btn btn-sm btn-outline-secondary">facebook</a>*@
                             @*<a href="" class="btn btn-sm btn-outline-secondary">youtube</a>*@
                         </div>
@@ -604,10 +607,7 @@
                 </div>
             </div>
         </footer>
-
-
         @* ========================================================================================================*@
-
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
         integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
