--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -87,7 +87,7 @@
                     </p>
                     <div class="d-flex justify-content-center">
                         <a id="survey" class="btn btn-primary btn-lg " href="https://www.surveymonkey.co.uk/r/VKXG7PP">
-                            Quick Survey
+                            Let Us Know What You Think
                         </a>
                     </div>
                 </div>
