--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -24,19 +24,21 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/ttt_owl.png")">
             <!-- Hotjar Tracking Code for www.dev.timetoteach.zone -->
         <script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:801472,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+                (function (h, o, t, j, a, r) {
+                    h.hj = h.hj || function () {
+                        (h.hj.q = h.hj.q || []).push(arguments)
+                    };
+                    h._hjSettings = {hjid: 801472, hjsv: 6};
+                    a = o.getElementsByTagName('head')[0];
+                    r = o.createElement('script');
+                    r.async = 1;
+                    r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+                    a.appendChild(r);
+                })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+        </script>
     </head>
     <body>
         <div class="d-none g-signin2" ></div>
-
 
         <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -80,16 +82,29 @@
         <div id="appBackground">
             <div id="mainAppTopMargin"></div>
 
-            @*<div class="container">*@
-                @*<div id="class-timetable-subject-warning" class="alert alert-info alert-dismissible fade show text-center" role="alert" >*@
-                    @*<button type="button" class="close" data-dismiss="alert" aria-label="Close">*@
-                        @*<span aria-hidden="true">&times;</span>*@
-                    @*</button>*@
+            <div class="container">
+                <div id="class-timetable-subject-warning" class="alert alert-secondary alert-dismissible fade show " role="alert" >
+                    <div class="d-flex justify-content-center">
+                        <a id="survey" class="btn btn-outline-danger btn-sm " href="https://www.surveymonkey.co.uk/r/VKXG7PP">
+                            Let Us Know What You Think
+                        </a>
+                    </div>
+                </div>
+            </div>
 
-                    @*<p>Note: This is a development version of Time To Teach Zone. It is for playing around with and giving an opportunity for early feedback</p>*@
-                @*</div>*@
+
+            @*<p>Note: This is a development version of Time To Teach Zone. It is for playing around with and giving an opportunity for early feedback</p>*@
             @*</div>*@
 
+            @*<div class="container">*@
+            @*<div id="class-timetable-subject-warning" class="alert alert-info alert-dismissible fade show text-center" role="alert" >*@
+            @*<button type="button" class="close" data-dismiss="alert" aria-label="Close">*@
+            @*<span aria-hidden="true">&times;</span>*@
+            @*</button>*@
+
+            @*<p>Note: This is a development version of Time To Teach Zone. It is for playing around with and giving an opportunity for early feedback</p>*@
+            @*</div>*@
+            @*</div>*@
             @content
         </div>
 
@@ -131,8 +146,6 @@
                 </div>
             </div>
         </footer>
-
-
         @* ========================================================================================================*@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
         integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
