--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -78,6 +78,20 @@
         <div id="home">
             <div id="stage-caption">
 
+                <div class="in-app-menu-small-devices alert alert-info alert-dismissible fade show " role="alert" >
+                    <div >
+                        <p>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <strong>Note:</strong>
+                            This app is aimed for larger screens presently to test the flow. The current mobile version
+                            is inconsistent and lacks certain functionality, but will be improved going forward.
+                        </p>
+                    </div>
+                </div>
+
+
                 <div class="alert alert-info alert-dismissible fade show" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
