--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -83,13 +83,26 @@
             <div id="mainAppTopMargin"></div>
 
             <div class="container">
-                <div id="class-timetable-subject-warning" class="alert alert-secondary alert-dismissible fade show " role="alert" >
+                <div class="in-app-menu-small-devices alert alert-info alert-dismissible fade show " role="alert" >
+                    <div >
+                        <p>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <strong>Note:</strong>
+                            This app is aimed for larger screens presently to test the flow. The current mobile version
+                            is inconsistent and lacks certain functionality, but will be improved going forward.
+                        </p>
+                    </div>
+                </div>
+                <div class="alert alert-secondary alert-dismissible fade show " role="alert" >
                     <div class="d-flex justify-content-center">
                         <a id="survey" class="btn btn-outline-danger btn-sm " href="https://www.surveymonkey.co.uk/r/VKXG7PP">
                             Let Us Know What You Think
                         </a>
                     </div>
                 </div>
+
             </div>
 
 
