--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -90,6 +90,18 @@
                     </div>
                 </div>
 
+                <div class="alert alert-warning alert-dismissible fade show " role="alert" >
+                    <div >
+                        <p>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            Remember to save any groups added - This will be changed to automatically save on adding the group, but for now hit the save button bottom, right of screen.
+                        </p>
+                    </div>
+                </div>
+
+
                 <div class="form-row add-new-class-form-row">
                     <div class="col-sm-12 col-lg-5">
                         <div class="text-center">
