--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -560,8 +560,8 @@
             </div>
         </div>
 
-        <div id="save-class-edit-changes-div" class="save-edit-buttons">
-            <button id="save-class-edit-changes-button" type="button" class="btn btn btn-primary" disabled="true">
+        <div id="save-class-edit-changes-div" class="d-flex justify-content-end" >
+            <button id="save-class-edit-changes-button" type="button" class="btn btn-lg btn-primary" disabled="true">
                 Save Changes</button>
         </div>
 
