--- a/server/public/stylesheets/timetable.css
+++ b/server/public/stylesheets/timetable.css
@@ -1,3 +1,7 @@
+#save-class-edit-changes-div {
+    padding-bottom: 10rem;
+}
+
 #class-timetable-section {
     margin-top: 0;
     padding-bottom: 3rem;
