--- a/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
@@ -303,7 +303,7 @@
             <input type="text" class="custom-control-input" id="classId" name="classId" value="@classDetails.id.id">
 
             <div class="form-submit-button text-center">
-                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                <button id="termly-plans-submit-button" type="submit" class="btn btn-primary btn-lg">Submit</button>
             </div>
         </form>
 
