--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -65,6 +65,19 @@
         <div class="termly-plans-overview-section text-center">
             <h4 class="termly-plans-overview-section-header">Termly Plans</h4>
 
+            <div class="d-flex justify-content-around">
+                <div class="col-3">
+                    <a id="termly-plans-edit" role="button" class="btn btn-warning btn-sm btn-block"
+                    href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansSelectOverallCurriculumAreasForTheTerm(classDetails.id.id)">
+                        Re-Select Curriculum Areas</a>
+                </div>
+                <div class="col-3">
+                    <button class="btn btn-sm btn-danger btn-block" role="button" href="#" disabled="true">
+                        Download Termly Plan PDF</button>
+                </div>
+            </div>
+
+
             <div id="termly-plans-overview-of-all-classes-section">
                 <div class="in-app-menu-medium-and-up">
                     <div class="termly-plans-overview-headers">
@@ -186,19 +199,6 @@
                         </div>
                     </div>
                 }
-            </div>
-
-            <div class="d-flex justify-content-end">
-                <div class="col-7"></div>
-                <div class="col-3">
-                <a id="termly-plans-edit" role="button" class="btn btn-warning btn-sm"
-                href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansSelectOverallCurriculumAreasForTheTerm(classDetails.id.id)">
-                    Re-Select Curriculum Areas</a>
-                </div>
-                <div class="col-2">
-                    <button class="btn btn-sm btn-danger btn-block" role="button" href="#" disabled="true">
-                        Download PDF</button>
-                </div>
             </div>
 
 
